tests/fixtures/LatestTests/VariableDeclarationTests/errors/assignment_to_non_lvalue_string.fg
/; EXPECT_ERROR: AssignmentToNonLValue
"Hello" = "World"

